Fix Basic slides buttons (z-index)

--- a/src/Basic/style.css
+++ b/src/Basic/style.css
@@ -100,6 +100,8 @@
 }
 .c-basic--interested .c-basic__content {
     margin-top:6em;
+    position: relative;
+    z-index: 1;
 }
 .c-basic__content .c-button {
     margin-right:1em;
